# voxel-spor

./: .clang-format  .gitignore  CMakeLists.txt  README.md
all/: CMakeLists.txt
cmake/: CompileSpirvShader.cmake  CreateShaderHeader.cmake  ShaderData.inl.in  shader_helpers.cmake
documentation/: CMakeLists.txt
include/voxel-spor/: window.h
include/voxel_spor/: vulkan_backend.h  window.h
res/: CMakeLists.txt
res/shaders/: .gitignore  particles.comp  particles.frag  particles.vert  sv_trace.comp  test.frag  test.vert
src/: voxel_spor.cpp  vulkan_backend.cpp  window.cpp
test/: CMakeLists.txt
test/src/: main.cpp
viewer/: CMakeLists.txt
viewer/include/viewer/: buffer_objects.h  glm_decl.h  model.h  svt_tracer.h  test_compute_scene.h  test_scene.h  vulkan_application.h  vulkan_base_objects.h  vulkan_buffer_objects.h  vulkan_compute.h  vulkan_helpers.h  vulkan_objects.h  vulkan_render_objects.h
viewer/src/: buffer_objects.cpp  image_loader.cpp  main.cpp  model.cpp  svt_tracer.cpp  test_compute_scene.cpp  test_scene.cpp  vulkan_application.cpp  vulkan_base_objects.cpp  vulkan_buffer_objects.cpp  vulkan_compute.cpp  vulkan_helpers.cpp  vulkan_objects.cpp  vulkan_render_objects.cpp
vkh/: CMakeLists.txt
vkh/include/vkh/: base_objects.h  buffer_objects.h  compute.h  glm_decl.h  helpers.h  render_objects.h
vkh/src/: base_objects.cpp  buffer_objects.cpp  compute.cpp  helpers.cpp  render_objects.cpp
voxel/: CMakeLists.txt
voxel/include/voxel/: vdb.h
voxel/src/: vdb.cpp  voxel.cpp
